add auth spec
