# ragbag-frontend/src/lib/api/gen/models/LoginRequest.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Authentication Api
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface LoginRequest
+ */
+export interface LoginRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof LoginRequest
+     */
+    username: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof LoginRequest
+     */
+    password: string;
+}
+
+/**
+ * Check if a given object implements the LoginRequest interface.
+ */
+export function instanceOfLoginRequest(value: object): value is LoginRequest {
+    if (!('username' in value) || value['username'] === undefined) return false;
+    if (!('password' in value) || value['password'] === undefined) return false;
+    return true;
+}
+
+export function LoginRequestFromJSON(json: any): LoginRequest {
+    return LoginRequestFromJSONTyped(json, false);
+}
+
+export function LoginRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): LoginRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'username': json['username'],
+        'password': json['password'],
+    };
+}
+
+export function LoginRequestToJSON(json: any): LoginRequest {
+    return LoginRequestToJSONTyped(json, false);
+}
+
+export function LoginRequestToJSONTyped(value?: LoginRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'username': value['username'],
+        'password': value['password'],
+    };
+}
+
