# ragbag-frontend/src/lib/api/gen/models/LoginResponse.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Authentication Api
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface LoginResponse
+ */
+export interface LoginResponse {
+    /**
+     * JSON Web Token
+     * @type {string}
+     * @memberof LoginResponse
+     */
+    accessToken: string;
+}
+
+/**
+ * Check if a given object implements the LoginResponse interface.
+ */
+export function instanceOfLoginResponse(value: object): value is LoginResponse {
+    if (!('accessToken' in value) || value['accessToken'] === undefined) return false;
+    return true;
+}
+
+export function LoginResponseFromJSON(json: any): LoginResponse {
+    return LoginResponseFromJSONTyped(json, false);
+}
+
+export function LoginResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): LoginResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'accessToken': json['access_token'],
+    };
+}
+
+export function LoginResponseToJSON(json: any): LoginResponse {
+    return LoginResponseToJSONTyped(json, false);
+}
+
+export function LoginResponseToJSONTyped(value?: LoginResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'access_token': value['accessToken'],
+    };
+}
+
