# ragbag-frontend/src/lib/api/gen/models/index.ts
@@ -5,6 +5,8 @@ export * from './CollectionDto';
 export * from './CollectionVisibilityDto';
 export * from './CreateBookmarkDto';
 export * from './CreateCollectionDto';
+export * from './LoginRequest';
+export * from './LoginResponse';
 export * from './ModelError';
 export * from './SpaceDto';
 export * from './UpdateBookmarkDto';
